--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="#" class="logo"><span>Landing</span> Page</a>
+
+            <a href="#" class="logo"><span>Eat</span> healthy</a>
 
             <ul class="nav-menu">
                 <li class="nav-item">
@@ -37,6 +38,28 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <section class="home">
+            <div class="home-text">
+                <h4 class="text-h4">Bem vindo ao DEV</h4>
+                <h1 class="text-h1">Comida boa</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, optio! Quae ab nihil facilis. At.
+                </p>
+                <a href="#" class="btn">Cardapio</a>
+            </div>
+
+            <div class="home-img">
+                <img src="img/home.png" alt="prato de comida">
+            </div>
+        </section>
+    </main>
+
+
+
+
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
