iniciando tela de login

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 </li>
             </ul>
 
+            <a href="login.html" target="_blank" class="btn-login">Login</a>
+
             <div class="menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -42,11 +44,11 @@
     <main>
         <section class="home">
             <div class="home-text">
-                <h4 class="text-h4">Bem vindo ao DEV</h4>
-                <h1 class="text-h1">Comida boa</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, optio! Quae ab nihil facilis. At.
+                <h4 class="text-h4">Descubra essa maravilha</h4>
+                <h1 class="text-h1">Dieta Mediterrânea</h1>
+                <p>Veja como começar e seguir a dieta mediterrânea, uma das mais saudáveis do mundo
                 </p>
-                <a href="#" class="btn">Cardapio</a>
+                <a href="#" class="btn">Ebook Grátis</a>
             </div>
 
             <div class="home-img">
@@ -54,6 +56,59 @@
             </div>
         </section>
     </main>
+
+    <div class="formulario">
+        <form id="form">
+            <h2>Formulário</h2>
+            <div>
+                <label for="nome">Nome</label>
+                <input type="text" name="nome" id="nome">
+            </div>
+
+            <div>
+                <label for="sobrenome">Sobrenome</label>
+                <input type="text" name="sobrenome" id="sobrenome">
+            </div>
+
+            <div>
+                <label for="email">E-mail</label>
+                <input type="email" name="email" id="email">
+            </div>
+
+            <div>
+                <label for="ddd">DDD</label>
+                <input type="text" name="ddd" id="ddd" placeholder="00">
+            </div>
+
+            <div>
+                <label for="telefone">Telefone</label>
+                <input type="text" name="telefone" id="telefone" placeholder="0000-0000">
+            </div>
+
+            <div>
+                <label for="tipo">Tipo</label>
+                <select name="tipo" id="tipo">
+                    <option value="1" selected>Whatsapp</option>
+                    <option value="2" selected>Residencial</option>
+                    <option value="3" selected>Comercial</option>
+                </select>
+            </div>
+
+            <div>
+                <label for="cpf">CPF</label>
+                <input type="text" name="cpf" id="cpf" placeholder="000.000.000-00">
+            </div>
+
+            <div>
+                <label for="observacoes">Observações</label>
+                <textarea name="observacoes" id="observacoes"></textarea>
+            </div>
+
+            <div>
+                <input type="submit" value="Cadastra">
+            </div>
+        </form>
+    </div>
 
 
 
