--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </li>
             </ul>
 
-            <a href="login.html" target="_blank" class="btn-login">Login</a>
+            <!-- <a href="login.html" target="_blank" class="btn-login">Login</a> -->
 
             <div class="menu">
                 <span class="bar"></span>
