--- a/index.html
+++ b/index.html
@@ -57,58 +57,61 @@
         </section>
     </main>
 
-    <div class="formulario">
-        <form id="form">
+    <!-- Formulário -->
+    <section class="formulario">
+        <div class="content">
             <h2>Formulário</h2>
-            <div>
-                <label for="nome">Nome</label>
-                <input type="text" name="nome" id="nome">
-            </div>
+            <form>
+                <div>
+                    <input class="inputs" type="text" placeholder="Digite seu nome">
+                    <span class="span-required">Nome deve contém no mínimo 3 caracteres</span>
+                </div>
+                <div>
+                    <input class="inputs" type="text" placeholder="Digite seu email">
+                    <span class="span-required">Informe um email válido</span>
+                </div>
 
-            <div>
-                <label for="sobrenome">Sobrenome</label>
-                <input type="text" name="sobrenome" id="sobrenome">
-            </div>
+                <div>
+                    <input class="inputs" type="password" placeholder="Senha">
+                    <span class="span-required">Digite uma senha com no mínimo 6 caracteres</span>
+                </div>
 
-            <div>
-                <label for="email">E-mail</label>
-                <input type="email" name="email" id="email">
-            </div>
+                <div>
+                    <input class="inputs" type="password" placeholder="Repita sua senha">
+                    <span class="span-required">As senhas devem ser compatíveis</span>
+                </div>
 
-            <div>
-                <label for="ddd">DDD</label>
-                <input type="text" name="ddd" id="ddd" placeholder="00">
-            </div>
+                <textarea class="inputs" name="descricao" id="descricao" cols="25" rows="10"
+                    placeholder="Envie sua dúvida ou sugestão para nós"></textarea>
 
-            <div>
-                <label for="telefone">Telefone</label>
-                <input type="text" name="telefone" id="telefone" placeholder="0000-0000">
-            </div>
+                <p>Interesse:</p>
 
-            <div>
-                <label for="tipo">Tipo</label>
-                <select name="tipo" id="tipo">
-                    <option value="1" selected>Whatsapp</option>
-                    <option value="2" selected>Residencial</option>
-                    <option value="3" selected>Comercial</option>
-                </select>
-            </div>
+                <div class="box-select">
+                    <div>
+                        <input type="radio" id="receitas" value="receitas" name="interesse">
+                        <label for="receitas">Receitas</label>
+                    </div>
 
-            <div>
-                <label for="cpf">CPF</label>
-                <input type="text" name="cpf" id="cpf" placeholder="000.000.000-00">
-            </div>
+                    <div>
+                        <input type="radio" id="saude" value="saude" name="interesse">
+                        <label for="saude">Saúde</label>
+                    </div>
 
-            <div>
-                <label for="observacoes">Observações</label>
-                <textarea name="observacoes" id="observacoes"></textarea>
-            </div>
+                    <div>
+                        <input type="radio" id="nutricao" value="nutricao" name="interesse">
+                        <label for="nutricao">Nutrição</label>
+                    </div>
 
-            <div>
-                <input type="submit" value="Cadastra">
-            </div>
-        </form>
-    </div>
+                </div>
+
+              
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+
+    </section>
+
+
 
 
 
