criado menu responsivo com javascript

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h1 class="text-h1">Dieta Mediterrânea</h1>
                 <p>Veja como começar e seguir a dieta mediterrânea, uma das mais saudáveis do mundo
                 </p>
-                <a href="#" class="btn">Ebook Grátis</a>
+                <a href="#" class="btn">Ebook</a>
             </div>
 
             <div class="home-img">
