inclusao de tabela concluida

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header>
         <nav class="navbar">
 
-            <a href="#" class="logo"><span>Eat</span> healthy</a>
+            <a href="#" class="logo"><span>Viva</span> Bem</a>
 
             <ul class="nav-menu">
                 <li class="nav-item">
@@ -41,6 +42,7 @@
         </nav>
     </header>
 
+    <!-- Main -->
     <main>
         <section class="home">
             <div class="home-text">
@@ -56,6 +58,71 @@
             </div>
         </section>
     </main>
+
+    <!-- Tabela -->
+    <section class="table">
+        <table>
+            <caption>
+                Café da manhã e lanches intermediários
+            </caption>
+            <thead>
+                <tr>
+                    <th>Grupos Alimentares</th>
+                    <th>2ª feira</th>
+                    <th>3ª feira</th>
+                    <th>4ª feira</th>
+                    <th>5ª feira</th>
+                    <th>6ª feira</th>
+                    <th>Sábado</th>
+                    <th>Domingo</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <th>Carboidratos</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Leite/derivados</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Frutas</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Oleaginosas/ Castanhas</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
 
     <!-- Formulário -->
     <section class="formulario">
@@ -104,7 +171,7 @@
 
                 </div>
 
-              
+
                 <button type="submit">Enviar</button>
             </form>
         </div>
