--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Paulo Henrique Rocha Matozinho">
+    <meta name="title" content="Dieta Mediterrânea">
+    <meta name="description" content="Beneficios da dieta mediterrânea">
+    <meta name="Keyword" content="dieta, mediterrânea, saudável, alimentação, nutrição">
+    <meta property="og:description" content="Beneficios da dieta mediterrânea">
+    <meta property="og:title" content="Dieta Mediterrânea">
+   <link rel="shortcut icon" href="img/icon.svg" type="image/x-icon">
     <title>Landing Page</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -171,18 +178,10 @@
 
                 </div>
 
-
                 <button type="submit">Enviar</button>
             </form>
         </div>
-
     </section>
-
-
-
-
-
-
 
     <script src="js/script.js"></script>
 </body>
