configurando botao para download do ebook

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="Keyword" content="dieta, mediterrânea, saudável, alimentação, nutrição">
     <meta property="og:description" content="Beneficios da dieta mediterrânea">
     <meta property="og:title" content="Dieta Mediterrânea">
-   <link rel="shortcut icon" href="img/icon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icon.svg" type="image/x-icon">
     <title>Landing Page</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -29,7 +29,7 @@
                     <a href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Sobre</a>
+                    <a href="#table">Dieta</a>
                 </li>
                 <li class="nav-item">
                     <a href="#">Menu</a>
@@ -37,9 +37,8 @@
                 <li class="nav-item">
                     <a href="#">Contato</a>
                 </li>
+                <i class='bx bx-log-in'></i>
             </ul>
-
-            <!-- <a href="login.html" target="_blank" class="btn-login">Login</a> -->
 
             <div class="menu">
                 <span class="bar"></span>
@@ -57,7 +56,7 @@
                 <h1 class="text-h1">Dieta Mediterrânea</h1>
                 <p>Veja como começar e seguir a dieta mediterrânea, uma das mais saudáveis do mundo
                 </p>
-                <a href="#" class="btn">Ebook</a>
+                <a href="img/ebook.pdf" download="ebook.pdf" type="application.pdf" class="btn">Ebook</a>
             </div>
 
             <div class="home-img">
@@ -67,7 +66,7 @@
     </main>
 
     <!-- Tabela -->
-    <section class="table">
+    <section id="table">
         <table>
             <caption>
                 Café da manhã e lanches intermediários
@@ -129,7 +128,6 @@
             </tbody>
         </table>
     </section>
-
 
     <!-- Formulário -->
     <section class="formulario">
