inclusão do footer

--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, sunt.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+
+    </footer>
+
     <script src="js/script.js"></script>
 </body>
 
