ajustando tabela e titudo da landing page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Beneficios da dieta mediterrânea">
     <meta property="og:title" content="Dieta Mediterrânea">
     <link rel="shortcut icon" href="img/icon.svg" type="image/x-icon">
-    <title>Landing Page</title>
+    <title>Viva Fit</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar">
 
-            <a href="#" class="logo"><span>Viva</span> Bem</a>
+            <a href="#" class="logo"><span>Viva</span> Fit</a>
 
             <ul class="nav-menu">
                 <li class="nav-item">
@@ -67,66 +67,89 @@
 
     <!-- Tabela -->
     <section id="table">
-        <table>
-            <caption>
-                Café da manhã e lanches intermediários
-            </caption>
-            <thead>
-                <tr>
-                    <th>Grupos Alimentares</th>
-                    <th>2ª feira</th>
-                    <th>3ª feira</th>
-                    <th>4ª feira</th>
-                    <th>5ª feira</th>
-                    <th>6ª feira</th>
-                    <th>Sábado</th>
-                    <th>Domingo</th>
-                </tr>
-            </thead>
+        <div class="table-container">
+            <table>
+                <caption>
+                   Monte seu cardádio com base na tabela modelo
+                </caption>
+                <thead>
+                    <tr>
+                        <th>Grupos Alimentares</th>
+                        <th>2ª feira</th>
+                        <th>3ª feira</th>
+                        <th>4ª feira</th>
+                        <th>5ª feira</th>
+                        <th>6ª feira</th>
+                        <th>Sábado</th>
+                        <th>Domingo</th>
+                    </tr>
+                </thead>
 
-            <tbody>
-                <tr>
-                    <th>Carboidratos</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <th>Leite/derivados</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <th>Frutas</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <th>Oleaginosas/ Castanhas</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </tbody>
-        </table>
+                <tbody>
+                    <tr>
+                        <th>Carboidratos</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <th>Leguminosas</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <th>Prot. animal</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <th>Legumes</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <th>Verduras</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <th>Frutas</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
     </section>
 
     <!-- Formulário -->
