--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
         </div>
     </section>
 
-    <footer class="footer">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, sunt.</p>
-        <p>Lorem ipsum dolor sit amet.</p>
-
+    <footer>
+        <div class="footer">
+            <p>Copyright &copy; Paulo Henrique</p>
+        </div>
     </footer>
 
     <script src="js/script.js"></script>
