ajustando responsividade da tela de login

--- a/index.html
+++ b/index.html
@@ -149,30 +149,29 @@
                 </tbody>
             </table>
         </div>
-
     </section>
 
     <!-- Formulário -->
     <section class="formulario">
         <div class="content">
             <h2>Formulário</h2>
-            <form>
+            <form id="form">
                 <div>
-                    <input class="inputs" type="text" placeholder="Digite seu nome">
+                    <input class="inputs required" type="text" placeholder="Digite seu nome">
                     <span class="span-required">Nome deve contém no mínimo 3 caracteres</span>
                 </div>
                 <div>
-                    <input class="inputs" type="text" placeholder="Digite seu email">
+                    <input class="inputs required" type="text" placeholder="Digite seu email">
                     <span class="span-required">Informe um email válido</span>
                 </div>
 
                 <div>
-                    <input class="inputs" type="password" placeholder="Senha">
+                    <input class="inputs required" type="password" placeholder="Senha">
                     <span class="span-required">Digite uma senha com no mínimo 6 caracteres</span>
                 </div>
 
                 <div>
-                    <input class="inputs" type="password" placeholder="Repita sua senha">
+                    <input class="inputs required" type="password" placeholder="Repita sua senha">
                     <span class="span-required">As senhas devem ser compatíveis</span>
                 </div>
 
