--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,34 @@
     <title>Tela de Login</title>
     <link rel="stylesheet" href="css/login.css">
 </head>
+
 <body>
     <main>
         <section id="login">
             <div id="imagem">
-              
+
             </div>
 
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, consequuntur soluta!</p>
+                <p>Bem vindo(a). Faça o login e acesse sua conta</p>
                 <form action="login.php" method="post">
-
+                    <div class="campo">
+                        <label for="login">Login</label>
+                        <input type="email" name="login" id="login" placeholder="Seu e-mail" required maxlength="25">
+                       
+                    </div>
+                    <div class="campo">
+                        <label for="senha">Senha</label>
+                        <input type="password" name="senha" id="senha" placeholder="Sua senha" required minlength="4" maxlength="8">                    
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="#" class="btn">Lembrar senha</a>
                 </form>
             </div>
 
         </section>
     </main>
 </body>
+
 </html>
