--- a/login.html
+++ b/login.html
@@ -12,28 +12,26 @@
 <body>
     <main>
         <section id="login">
-            <div id="imagem">
 
-            </div>
+            <div id="imagem"></div>
 
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Bem vindo(a). Faça o login e acesse sua conta</p>
-                <form action="login.php" method="post">
+                <form action="login">
                     <div class="campo">
                         <label for="login">Login</label>
-                        <input type="email" name="login" id="login" placeholder="Seu e-mail" required maxlength="25">
-                       
+                        <input type="email" name="login" id="login" placeholder=" Seu e-mail" required maxlength="25">                      
                     </div>
                     <div class="campo">
                         <label for="senha">Senha</label>
-                        <input type="password" name="senha" id="senha" placeholder="Sua senha" required minlength="4" maxlength="8">                    
+                        <input type="password" name="senha" id="senha" placeholder=" Sua senha" required minlength="4" maxlength="8">                    
                     </div>
                     <input type="submit" value="Entrar">
                     <a href="#" class="btn">Lembrar senha</a>
                 </form>
             </div>
-
+            
         </section>
     </main>
 </body>
