ajustando tabela e diretorios

--- a/02_landingPage/index.html
+++ b/02_landingPage/index.html
@@ -32,7 +32,7 @@
                     <a href="#table">Dieta</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Menu</a>
+                    <a href="#carrossel">Menu</a>
                 </li>
                 <li class="nav-item">
                     <a href="#">Contato</a>
@@ -107,10 +107,10 @@
                     </tr>
                     <tr>
                         <th>Leguminosas</th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
+                        <th>Peixe</th>
+                        <th>Ovos</th>
+                        <th>Frango</th>
+                        <th>Carne Bovina</th>
                         <th></th>
                         <th></th>
                         <th></th>
@@ -127,18 +127,18 @@
                     </tr>
                     <tr>
                         <th>Legumes</th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
+                        <th>Cenoura</th>
+                        <th>Beterraba</th>
+                        <th>Pimentão</th>
+                        <th>Inhame  </th>
                         <th></th>
                         <th></th>
                         <th></th>
                     </tr>
                     <tr>
                         <th>Verduras</th>
-                        <th></th>
-                        <th></th>
+                        <th>Alface</th>
+                        <th>Couve</th>
                         <th></th>
                         <th></th>
                         <th></th>
@@ -147,13 +147,13 @@
                     </tr>
                     <tr>
                         <th>Frutas</th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
+                        <th>Banana</th>
+                        <th>Maça</th>
+                        <th>Morango</th>
+                        <th>Mamão</th>
+                        <th>Abacate</th>
+                        <th>Pêra</th>
+                        <th>Melancia</th>
                     </tr>
                 </tbody>
             </table>
