criado sessão Testimonials

--- a/02_landingPage/index.html
+++ b/02_landingPage/index.html
@@ -81,12 +81,10 @@
                 Marrocos, Itália, Grécia,
                 Chipre e Croácia, em 4
                 de dezembro de 2013.</p>
-            <!-- <a href="CV Frontend.pdf" class="btn">Baixar CV</a> -->
         </div>
     </section>
 
-    <!-- Banner -->
-
+    <!-- Banner e Tabela -->
     <section id="menu">
         <table>
             <caption>
@@ -129,7 +127,62 @@
         </div>
     </section>
 
+    <!-- Testimonials -->
+    <section>
+        <div class="testimonials">
+            <div class="inner">
+                <h3>Testimonials</h3>
+                <div class="border"></div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="testimonial">
+                        <img src="https://randomuser.me/api/portraits/women/12.jpg" alt="imagem de uma mulher">
+                    </div>
+                    <p class="name">Emilia Martins</p>
+                    <div class="stars">
+                        <i class='bx bxs-star bx-tada'></i>
+                        <i class='bx bxs-star bx-tada'></i>
+                        <i class='bx bxs-star bx-tada'></i>
+                        <i class='bx bxs-star bx-tada'></i>
+                        <i class='bx bxs-star bx-tada'></i>
+                    </div>
+                    <p>Minha Saúde melhorou muito depois que adotei a Dieta Mediterrânea</p>
+                </div>
     
+                <div class="col">
+                    <div class="testimonial">
+                        <img src="https://randomuser.me/api/portraits/men/22.jpg" alt="imagem de um homem">
+                    </div>
+                    <p class="name">Roberto Gusmão</p>
+                    <div class="stars">
+                        <i class='bx bxs-star bx-tada'></i>
+                        <i class='bx bxs-star bx-tada'></i>
+                        <i class='bx bxs-star bx-tada'></i>
+                        <i class='bx bx-star'></i>
+                        <i class='bx bx-star'></i>
+                    </div>
+                    <p>Sempre busco seguir as dicas desse site, são muito boas e trazem ótimos beneficios para a saúde</p>
+                </div>
+    
+                <div class="col">
+                    <div class="testimonial">
+                        <img src="https://randomuser.me/api/portraits/women/30.jpg" alt="imagem de uma mulher">
+                    </div>
+                    <p class="name">Samantha Silva</p>
+                    <div class="stars">
+                        <i class='bx bxs-star bx-tada'></i>
+                        <i class='bx bxs-star bx-tada'></i>
+                        <i class='bx bxs-star bx-tada'></i>
+                        <i class='bx bxs-star bx-tada'></i>
+                        <i class='bx bx-star'></i>
+                    </div>
+                    <p>Indico para todos essa culinária, vale muito a pena, estou amando.</p>
+                </div>
+            </div>
+        </div>      
+    </section>
 
     <!-- Formulário -->
     <section id="formulario">
@@ -138,13 +191,14 @@
             <form id="form">
                 <div>
                     <label for="name"></label>
-                    <input id="name" class="inputs required" type="text" placeholder="Digite seu nome" required minlength="3"
-                        maxlength="25">
+                    <input id="name" class="inputs required" type="text" placeholder="Digite seu nome" required
+                        minlength="3" maxlength="25">
                     <span class="span-required">Nome deve contém no mínimo 3 caracteres</span>
                 </div>
                 <div>
                     <label for="email"></label>
-                    <input id="email" class="inputs required" type="email" placeholder="Digite seu email" required maxlength="25">
+                    <input id="email" class="inputs required" type="email" placeholder="Digite seu email" required
+                        maxlength="25">
                     <span class="span-required">Informe um email válido</span>
                 </div>
 
@@ -155,7 +209,8 @@
                 </div>
 
                 <div>
-                    <input id="cpf_digitado" class="inputs required" type="text" placeholder="Digite seu CPF, somente numeros " required>
+                    <input id="cpf_digitado" class="inputs required" type="text"
+                        placeholder="Digite seu CPF, somente numeros " required>
                     <span class="span-required">Digite um CPF válido</span>
                 </div>
 
@@ -182,11 +237,12 @@
 
                 </div>
 
-                <button type="submit" >Enviar</button>
+                <button type="submit">Enviar</button>
             </form>
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         <div class="footer">
             <p>Copyright &copy; Paulo Henrique</p>
